--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@ html, body {
   color: white; 
   border-width: 2px; 
   border-color: white; 
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px 20px;
   margin: 5px;
   cursor: pointer;
@@ -50,5 +50,22 @@ html, body {
 }
 
 .joinandcreatebuttons button:hover {
+  background-color: #333;
+}
+
+.backbutton button {
+  width: 100px;
+  height: 50px;
+  background-color: transparent;
+  color: white;
+  font-family: "Roboto Mono", monospace;
+  font-size: 16px;
+  margin-top: 20px;
+  margin-left: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.backbutton button:hover {
   background-color: #333;
 }
