--- a/src/App.css
+++ b/src/App.css
@@ -53,19 +53,60 @@ html, body {
   background-color: #333;
 }
 
-.backbutton button {
+.joincontainer {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+
+.joincontainer button {
+  position: absolute;
+  top: 30px;
+  left: 30px;
   width: 100px;
   height: 50px;
   background-color: transparent;
   color: white;
   font-family: "Roboto Mono", monospace;
   font-size: 16px;
-  margin-top: 20px;
-  margin-left: 20px;
   border-radius: 10px;
   cursor: pointer;
+  z-index: 10;
 }
 
-.backbutton button:hover {
+.joincontainer button:hover {
   background-color: #333;
+}
+
+.joincontainer input {
+  width: 200px;
+  height: 50px;
+  background-color: transparent;
+  color: white;
+  border-width: 2px;
+  border-color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-family: "Roboto Mono", monospace;
+  font-size: 16px;
+}
+
+.entercodetext {
+  color: white;
+  font-family: "Roboto Mono", monospace;
+  font-size: 30px;
+  margin-bottom: 25px;
+}
+
+.useforcenterscreen {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
